October 26, 2025
    Refactored Addon.
    Reduced method sizes to make the code chunks easier to parse.
    Fixed issues with predict stacks.
    Added timer off before starting timer to make sure it's only run once.
    Made FORT restart switch to W formation first.

October 22, 2025
    - Changed update URL to Anti's for now.
    - Prevet FORT restart happening on very first run.

October 19, 2025
    - Many fixes/changes to work with BrivGemFarm 4.4.3
    - Updated to use BrivGemFarm's PredictStacks function.
    - Added Emmote's incremental leveling code.
    - Updated StackNormal to allow ignoring the melf check for cases such as a forced restart.
    
December 12, 2024 - v1.1.5
    - Stacks prediction handles the "Accurate Acrobatics" Briv feat that rounds down his jump amount.
    - Briv stacks gained while clearing the zone before stacking and setting up the stack formation are counted when stacks prediction is on.
    - The correct jump value for Briv is used when the 4J or 9J feat is equipped and Briv has a lower jump number.
    - The correct value for "SB stacks to farm for the next run" is shown when stacks prediction is off.
    - Max zone updated to 2501 for the Melf forecast.
    - The value of the current reset used for the Melf forecast is saved in case the game is closed.

December 03, 2024 - v1.1.4
    - Fixed several stacks prediction errors.
    - The script immediately resumes to the main loop instead of waiting the end the 5-min timer if the party is resetting or the game is closed.

December 03, 2024 - v1.1.3
    - Fixed a case of online stacking being interrupted when Briv had farmed Steelbones stacks beforehand.

November 29, 2024 - v1.1.2
    - Melf, Tatyana and Warden don't require to be levelled up before offline stacking anymore.

November 24, 2024 - v1.1.1
    - Fixed MelfActive setting not getting loaded when reloading ICScripthub.

November 24, 2024 - v1.1.0
    - New features: