@@ -1,6 +1,6 @@
 {
 	"Name":"BrivGemFarm LevelUp",
-	"Version": "v1.4.7",
+	"Version": "v1.4.8",
     "Includes" : "IC_BrivGemFarm_LevelUp_Component.ahk",
     "Author" : "ImpEGamer",
     "Url" : "https://github.com/antilectual/IC_Addons-1/tree/Anti-Changes/IC_BrivGemFarm_LevelUp_Extra",
