@@ -1,3 +1,12 @@
+October 29, 2025
+    Added Emmote's fix to avoid getting stuck in W.
+    Updated to use proxy settings file.
+    Updated x25 levelup to only togglectrl when pressing leveling key up and not for full leveling process.
+    Fixed issues with not properly switching from W formation after restart.
+    Updated IgnoreBrivHaste to not be swapped with PredictStacks. 
+    PredictStacks accounts for Thellora, so use stack count that doesn't include Thellora.
+
+
 October 26, 2025
     Refactored Addon.
     Reduced method sizes to make the code chunks easier to parse.
